<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:background="@color/colorPrimary"
        android:paddingStart="8dp" />

    <!-- Empty view is only visible when the list has no items. -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAppearance="?android:textAppearanceMedium" />

    <RelativeLayout
        android:id="@+id/loading_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Loading indicator is only shown before the first load -->
        <ProgressBar
            android:id="@+id/loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimary" />

        <ImageView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/powered_by" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        >

        <TextView
            android:id="@+id/text_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:layout_centerHorizontal="true"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_no_internet"
            android:layout_centerHorizontal="true"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/text_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_internet_image"
            android:layout_centerHorizontal="true"
            android:text="@string/please_try" />

        <TextView
            android:id="@+id/text_try_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_try"
            android:layout_centerHorizontal="true"
            android:text="@string/turning_off_airplane_mode" />

        <TextView
            android:id="@+id/text_try_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_try_1"
            android:layout_centerHorizontal="true"
            android:text="@string/turning_on_mobile_data_or_wifi" />

        <TextView
            android:id="@+id/text_try_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_try_2"
            android:layout_centerHorizontal="true"
            android:text="@string/checking_signal_in_your_area" />

        <TextView
            android:id="@+id/text_try_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_try_3"
            android:layout_centerHorizontal="true"
            android:text="@string/and_restarting_the_app" />

    </RelativeLayout>

</RelativeLayout>