<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetail">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                style="@style/Headers"
                />

            <TextView
                style="@style/Headers"
                android:text="@string/original_title"
                />

            <TextView
                android:id="@+id/original_title"
                style="@style/Details" />

            <TextView
                style="@style/Headers"
                android:text="@string/synopsis"
                />

            <TextView
                android:id="@+id/synopsis"
                style="@style/Details"
                android:layout_width="wrap_content"
                android:gravity="left"/>

            <TextView
                style="@style/Headers"
                android:text="User Rating"/>

            <TextView
                android:id="@+id/user_rating"
                style="@style/Details" />

            <TextView
                style="@style/Headers"
                android:text="@string/release_date" />

            <TextView
                android:id="@+id/release_date"
                style="@style/Details"
                android:paddingBottom="8dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>